--- a/iNeedClass/Classes/iPhone/Home/HomeViewController.xib
+++ b/iNeedClass/Classes/iPhone/Home/HomeViewController.xib
@@ -6,10 +6,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController">
             <connections>
+                <outlet property="arrow" destination="dHI-LS-tyj" id="xra-WQ-frH"/>
                 <outlet property="barraVertical" destination="PaV-N0-xzk" id="46y-mD-X1p"/>
                 <outlet property="borde1" destination="NOF-VU-veR" id="Ewh-gT-cYq"/>
                 <outlet property="borde2" destination="c2f-3F-hYJ" id="O9p-MA-cFU"/>
                 <outlet property="borde3" destination="Qal-dt-6zw" id="3eQ-S9-rzc"/>
+                <outlet property="mustache" destination="7A8-yD-KsW" id="jt7-3N-HjZ"/>
+                <outlet property="tutorial" destination="O4c-Ta-5Jz" id="QR5-g8-lAp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,23 +21,22 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Doctor100.png" id="23K-NN-1oY">
-                    <rect key="frame" x="236" y="10" width="91" height="65"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="qMG-ym-zLi">
-                    <rect key="frame" x="135" y="118" width="171" height="39"/>
+                    <rect key="frame" x="135" y="116" width="171" height="43"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="26"/>
-                    <state key="normal" title="Tutorial">
-                        <color key="titleColor" red="0.36862745099999999" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="deviceRGB"/>
+                    <state key="normal" title="iNeedClass">
+                        <color key="titleColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="actionAbout:" destination="-1" eventType="touchUpInside" id="ew7-oJ-CbW"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" id="PaV-N0-xzk">
                     <rect key="frame" x="59" y="0.0" width="3" height="568"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
-                    <color key="backgroundColor" red="0.36862745099999999" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="deviceRGB"/>
+                    <color key="backgroundColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="inclogo100.png" id="WaS-R9-aHj" userLabel="Tutorial">
                     <rect key="frame" x="11" y="88" width="100" height="100"/>
@@ -48,30 +50,29 @@
                     <rect key="frame" x="11" y="368" width="100" height="100"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iNeedClass" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5YD-Lw-COY">
-                    <rect key="frame" x="82" y="25" width="157" height="33"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="27"/>
-                    <color key="textColor" red="0.36862745099999999" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="deviceRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Rz8-np-xje">
                     <rect key="frame" x="135" y="256" width="171" height="39"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="26"/>
                     <state key="normal" title="Clases">
-                        <color key="titleColor" red="0.36862745099999999" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="titleColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="actionClass:" destination="-1" eventType="touchUpInside" id="LvV-O5-ZkM"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="w9r-jA-PoA">
                     <rect key="frame" x="135" y="398" width="171" height="39"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="26"/>
                     <state key="normal" title="Intercambios">
-                        <color key="titleColor" red="0.36862745099999999" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="titleColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="actionExchange:" destination="-1" eventType="touchUpInside" id="6E4-CA-BkL"/>
+                    </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="borde100.png" id="NOF-VU-veR">
                     <rect key="frame" x="11" y="88" width="100" height="100"/>
@@ -85,6 +86,39 @@
                     <rect key="frame" x="11" y="368" width="100" height="100"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tutorial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5YD-Lw-COY">
+                    <rect key="frame" x="196" y="75" width="157" height="33"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="27"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" id="8Rt-UG-8eu">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.29411764705882354" green="0.75686274509803919" blue="0.82352941176470584" alpha="1" colorSpace="deviceRGB"/>
+                </view>
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.png" id="dHI-LS-tyj">
+                    <rect key="frame" x="224" y="75" width="47" height="46"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pulsa para acceder al tutorial" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O4c-Ta-5Jz">
+                    <rect key="frame" x="111" y="111" width="172" height="46"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="19"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7A8-yD-KsW">
+                    <rect key="frame" x="242" y="20" width="65" height="65"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" image="Doctor100.png">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="actionHelp:" destination="-1" eventType="touchUpInside" id="rv9-5H-CDH"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
@@ -93,6 +127,7 @@
     </objects>
     <resources>
         <image name="Doctor100.png" width="100" height="100"/>
+        <image name="arrow.png" width="50" height="50"/>
         <image name="borde100.png" width="100" height="100"/>
         <image name="clases100.png" width="100" height="100"/>
         <image name="inclogo100.png" width="100" height="100"/>
