--- a/iNeedClass/Classes/iPhone/Home/HomeViewController.xib
+++ b/iNeedClass/Classes/iPhone/Home/HomeViewController.xib
@@ -11,6 +11,9 @@
                 <outlet property="borde1" destination="NOF-VU-veR" id="Ewh-gT-cYq"/>
                 <outlet property="borde2" destination="c2f-3F-hYJ" id="O9p-MA-cFU"/>
                 <outlet property="borde3" destination="Qal-dt-6zw" id="3eQ-S9-rzc"/>
+                <outlet property="buttonClasses" destination="Rz8-np-xje" id="leI-fK-dHT"/>
+                <outlet property="buttonExchange" destination="w9r-jA-PoA" id="Xmt-50-3fn"/>
+                <outlet property="buttonINC" destination="qMG-ym-zLi" id="SZR-2b-QYU"/>
                 <outlet property="tutorial" destination="O4c-Ta-5Jz" id="QR5-g8-lAp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -85,13 +88,6 @@
                     <rect key="frame" x="11" y="368" width="100" height="100"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tutorial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5YD-Lw-COY">
-                    <rect key="frame" x="196" y="75" width="157" height="33"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="27"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" id="8Rt-UG-8eu">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -104,7 +100,7 @@
                 <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pulsa para acceder al tutorial" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O4c-Ta-5Jz">
                     <rect key="frame" x="111" y="111" width="172" height="46"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="19"/>
+                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="19"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
