--- a/iNeedClass/Classes/iPhone/Tutorial/TutorialViewController.xib
+++ b/iNeedClass/Classes/iPhone/Tutorial/TutorialViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6221" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6221" systemVersion="14C68k" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
@@ -7,12 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TutorialViewController">
             <connections>
-                <outlet property="butonSign" destination="7gl-PJ-W7e" id="g3N-CG-tLM"/>
                 <outlet property="buttonLogin" destination="gaU-qN-Isl" id="JoU-Tt-DPH"/>
                 <outlet property="dismissButton" destination="A3N-Fn-x1O" id="ngT-Wf-4UR"/>
                 <outlet property="pageControl" destination="lb9-sa-HJ4" id="ETo-2H-p4T"/>
                 <outlet property="scrollTutorial" destination="5yK-J2-VTs" id="yxY-7J-g7k"/>
-                <outlet property="separatorView" destination="KLI-47-c9k" id="tfe-XQ-kmg"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewButtons" destination="oJU-Pi-zPX" id="aG8-Ae-pdR"/>
                 <outlet property="vistaGris" destination="oo3-cl-QwS" id="gZF-ZQ-Hcl"/>
@@ -31,40 +29,11 @@
                     <rect key="frame" x="0.0" y="488" width="320" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <view contentMode="scaleToFill" id="KLI-47-c9k">
-                            <rect key="frame" x="160" y="20" width="1" height="60"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
                         <view alpha="0.49999999999999961" contentMode="scaleToFill" id="oo3-cl-QwS">
                             <rect key="frame" x="0.0" y="20" width="320" height="60"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="gaU-qN-Isl">
-                            <rect key="frame" x="0.0" y="20" width="160" height="60"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
-                            <state key="normal" title="Login"/>
-                            <connections>
-                                <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="LG6-8h-6TL"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7gl-PJ-W7e">
-                            <rect key="frame" x="160" y="20" width="160" height="60"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="24"/>
-                            <state key="normal" title="Registrarse">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="signAction:" destination="-1" eventType="touchUpInside" id="oSO-Ij-8UT"/>
-                            </connections>
-                        </button>
-                        <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" id="lb9-sa-HJ4">
-                            <rect key="frame" x="141" y="-8" width="39" height="37"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        </pageControl>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="A3N-Fn-x1O">
                             <rect key="frame" x="119" y="35" width="83" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
@@ -77,6 +46,21 @@
                                 <action selector="dismiss:" destination="-1" eventType="touchUpInside" id="Qnt-dT-JBd"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" id="gaU-qN-Isl">
+                            <rect key="frame" x="0.0" y="20" width="320" height="60"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="19"/>
+                            <state key="normal" title="Ve al Perfil">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="LG6-8h-6TL"/>
+                            </connections>
+                        </button>
+                        <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" id="lb9-sa-HJ4">
+                            <rect key="frame" x="141" y="-8" width="39" height="37"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        </pageControl>
                     </subviews>
                     <color key="backgroundColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
                 </view>
