--- a/iNeedClass/Classes/iPhone/Pruebas/Home2ViewController.xib
+++ b/iNeedClass/Classes/iPhone/Pruebas/Home2ViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6249" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6249" systemVersion="14C68k" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6243"/>
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Home2ViewController">
             <connections>
+                <outlet property="labelView" destination="ecP-L3-Zjn" id="OsY-Cx-A0X"/>
                 <outlet property="menuItem" destination="gDp-R7-qbn" id="upX-i9-E2X"/>
                 <outlet property="scrollView" destination="HfH-MF-3q3" id="mVe-3h-7IZ"/>
                 <outlet property="tabBar" destination="Dtf-ie-dqd" id="5Vk-gF-aIe"/>
@@ -19,8 +20,17 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HfH-MF-3q3">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="482"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="Db7-oe-BeB"/>
+                    </connections>
                 </scrollView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecP-L3-Zjn" customClass="TOMSMorphingLabel">
+                    <rect key="frame" x="0.0" y="479" width="320" height="40"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dtf-ie-dqd" customClass="BFPaperTabBar">
                     <rect key="frame" x="0.0" y="519" width="320" height="49"/>
                     <color key="backgroundColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
